--- a/css/styles.css
+++ b/css/styles.css
@@ -279,7 +279,7 @@ img {
   border-radius: 0 0 4px 4px;
 }
 
-.team-ul .team-li:not(.team-social-elem) {
+.team-li {
   box-shadow:
     1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -326,6 +326,7 @@ img {
 
 .svg-icon {
   fill: #f4f4fd;
+  display: block;
 }
 
 .team-social-list .social-icon:hover,
@@ -465,14 +466,14 @@ img {
   background-color: #31d0aa;
 }
 
-/* modal for features */
+/* features popup*/
 
-.modal-container-wrapper {
+.features-popup-container {
   position: relative;
   overflow: hidden;
 }
 
-.modal-paragraph {
+.popup-paragraph {
   position: absolute;
   top: 0;
   font-size: 16px;
@@ -487,12 +488,192 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-container-wrapper:hover .modal-paragraph {
+.features-popup-container:hover .popup-paragraph {
   transform: translateY(0%);
 }
 
 /* subscribe container */
 .container-subscribe {
   display: flex;
+  gap: 24px;
+}
+
+.subscribe-paragraph {
+  margin-bottom: 16px;
   color: #f4f4fd;
+}
+
+.subscribe-align-items {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+}
+
+.subscribe-input {
+  background-color: #2e2f42;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  border: 1px solid white;
+}
+
+.subscribe-input::placeholder {
+  color: #f4f4fd;
+  padding-left: 16px;
+}
+
+.subscribe-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 165px;
+  height: 40px;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  gap: 16px;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:hover {
+  background-color: #404bbf;
+}
+
+/* modal window */
+.modal-overlay-popup {
+  background-color: rgba(46, 47, 66, 0.4);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  /* opacity: 0;
+  pointer-events: none; */
+}
+
+.modal-overlay-popup.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modal-window {
+  background-color: #fcfcfc;
+  box-shadow:
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+
+  width: 408px;
+  height: 584px;
+}
+
+.modal-paragraph {
+  text-align: center;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px;
+  align-items: center;
+  justify-content: center;
+  color: #8e8f99;
+}
+
+.modal-input {
+  border: 1px solid #2e2f42;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+}
+
+.modal-comment {
+  height: 80px;
+}
+
+.modal-label {
+  font-size: 12px;
+  margin-top: 16px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.modal-send-button {
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  gap: 16px;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 24px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.modal-send-button:hover {
+  background-color: #404bbf;
+}
+
+.modal-checkbox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+
+.modal-checkbox-wrapper {
+  padding: 0 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-close-button {
+  border-radius: 50%;
+  border: 1px solid #e7e9fc;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  margin: 24px 24px 24px auto;
+}
+
+.modal-link {
+  padding: 0;
+  margin: 0;
+  color: #4d5ae5;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  text-decoration: underline;
 }
