--- a/css/styles.css
+++ b/css/styles.css
@@ -559,8 +559,8 @@ img {
   top: 0;
   left: 0;
 
-  opacity: 0;
-  pointer-events: none;
+  /* opacity: 0;
+  pointer-events: none; */
 }
 
 .modal-overlay-popup.is-open {
@@ -577,6 +577,7 @@ img {
 
   width: 408px;
   height: 584px;
+  max-width: 100%;
 }
 
 .modal-paragraph {
@@ -590,17 +591,36 @@ img {
   align-items: center;
   justify-content: center;
   color: #8e8f99;
+  gap: 4px;
+}
+
+.modal-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.modal-input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: #8e8f99;
+  pointer-events: none;
 }
 
 .modal-input {
   border: 1px solid #2e2f42;
   border-radius: 4px;
-  width: 360px;
+  width: 100%;
   height: 40px;
+  padding-left: 40px;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-comment {
-  height: 80px;
+.modal-input:focus-within {
+  border-color: #4d5ae5;
 }
 
 .modal-label {
@@ -611,46 +631,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 4px;
-}
-
-.modal-send-button {
-  padding: 16px 32px;
-  width: 169px;
-  height: 56px;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: #4d5ae5;
-  color: #f4f4fd;
-  gap: 16px;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  line-height: 1.5;
-  font-size: 16px;
-  letter-spacing: 0.04em;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-top: 24px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-}
-
-.modal-send-button:hover {
-  background-color: #404bbf;
-}
-
-.modal-checkbox {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 8px;
-}
-
-.modal-checkbox-wrapper {
-  padding: 0 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
 }
 
 .modal-close-button {
@@ -668,6 +649,13 @@ img {
   margin: 24px 24px 24px auto;
 }
 
+.comment-field {
+  resize: none;
+  width: 100%;
+  height: 80px;
+  padding: 8px 0 0 16px;
+}
+
 .modal-link {
   padding: 0;
   margin: 0;
@@ -676,4 +664,53 @@ img {
   line-height: 1.33;
   letter-spacing: 0.04em;
   text-decoration: underline;
+}
+
+.modal-checkbox-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 24px;
+}
+
+.modal-checkbox {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+}
+
+.modal-text-checkbox {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.modal-send-button {
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  margin: 24px 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.modal-send-button:hover {
+  background-color: #404bbf;
+}
+
+.modal-window .svg-icon:active {
+  color: #4d5ae5;
 }
