--- a/css/styles.css
+++ b/css/styles.css
@@ -619,8 +619,16 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus-within {
+.modal-wrapper:focus-within .modal-input {
   border-color: #4d5ae5;
+}
+
+.modal-input-icon {
+  color: #2e2f42;
+}
+
+.modal-wrapper:focus-within .modal-input-icon {
+  color: #4d5ae5;
 }
 
 .modal-label {
@@ -709,8 +717,4 @@ img {
 
 .modal-send-button:hover {
   background-color: #404bbf;
-}
-
-.modal-window .svg-icon:active {
-  color: #4d5ae5;
 }
