--- a/css/styles.css
+++ b/css/styles.css
@@ -493,14 +493,18 @@ img {
 }
 
 /* subscribe container */
-.container-subscribe {
-  display: flex;
-  gap: 24px;
-}
-
 .subscribe-paragraph {
   margin-bottom: 16px;
-  color: #f4f4fd;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.subscribe-form {
+  display: flex;
+  gap: 24px;
 }
 
 .subscribe-align-items {
@@ -510,16 +514,21 @@ img {
 }
 
 .subscribe-input {
-  background-color: #2e2f42;
+  background-color: transparent;
   border-radius: 4px;
   width: 264px;
   height: 40px;
-  border: 1px solid white;
+  border: 1px solid #ffffff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
 }
 
 .subscribe-input::placeholder {
-  color: #f4f4fd;
-  padding-left: 16px;
+  color: #ffffff;
 }
 
 .subscribe-button {
@@ -528,23 +537,24 @@ img {
   justify-content: center;
   width: 165px;
   height: 40px;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: #4d5ae5;
-  color: #f4f4fd;
-  gap: 16px;
-  margin: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  font-size: 16px;
   letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
   border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 4px;
 }
 
 .subscribe-button:hover {
   background-color: #404bbf;
+}
+
+.subscribe-icon {
+  margin-left: 16px;
 }
 
 /* modal window */
@@ -558,6 +568,9 @@ img {
   height: 100%;
   top: 0;
   left: 0;
+  transition:
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   /* opacity: 0;
   pointer-events: none; */
@@ -574,14 +587,57 @@ img {
     0 1px 1px 0 rgba(0, 0, 0, 0.14),
     0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
-
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   max-width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
+}
+
+.modal-close-button {
+  position: absolute;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background-color: #e7e9fc;
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover {
+  border: none;
+}
+
+.modal-close-button:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.svg-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.svg-close-icon:hover,
+.svg-close-icon:focus {
+  fill: #ffffff;
 }
 
 .modal-paragraph {
   text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
 }
 
 .modal-form {
@@ -595,124 +651,128 @@ img {
 }
 
 .modal-wrapper {
-  position: relative;
+  margin-bottom: 8px;
   width: 100%;
+}
+
+.modal-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.modal-input-wrapper {
+  position: relative;
 }
 
 .modal-input-icon {
   position: absolute;
-  left: 12px;
+  left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  fill: #8e8f99;
-  pointer-events: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-icon:focus {
+  fill: #4d5ae5;
 }
 
 .modal-input {
-  border: 1px solid #2e2f42;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
   height: 40px;
-  padding-left: 40px;
+  padding-left: 38px;
   background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-wrapper:focus-within .modal-input {
+.modal-input:focus {
   border-color: #4d5ae5;
 }
 
-.modal-input-icon {
-  color: #2e2f42;
+.modal-comment {
+  margin-bottom: 16px;
 }
 
-.modal-wrapper:focus-within .modal-input-icon {
-  color: #4d5ae5;
-}
-
-.modal-label {
+.modal-comment-input {
+  width: 100%;
+  height: 120px;
   font-size: 12px;
-  margin-top: 16px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  width: 100%;
-}
-
-.modal-close-button {
-  border-radius: 50%;
-  border: 1px solid #e7e9fc;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-
-  margin: 24px 24px 24px auto;
-}
-
-.comment-field {
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  outline: transparent;
+  padding: 8px 16px;
   resize: none;
-  width: 100%;
-  height: 80px;
-  padding: 8px 0 0 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-link {
-  padding: 0;
-  margin: 0;
-  color: #4d5ae5;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.04em;
-  text-decoration: underline;
+.modal-comment-input:hover {
+  border-color: #4d5ae5;
 }
 
 .modal-checkbox-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 24px;
+  margin-bottom: 24px;
 }
 
-.modal-checkbox {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  align-items: center;
-}
-
-.modal-text-checkbox {
+.modal-checkbox-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
 
+.checkbox-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.checkbox-input:checked .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.checkbox-link {
+  color: #4d5ae5;
+  text-decoration: underline;
+  font-size: 12px;
+  line-height: 1.33;
+}
+
 .modal-send-button {
-  padding: 16px 32px;
-  width: 169px;
+  display: block;
+  min-width: 169px;
   height: 56px;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: #4d5ae5;
-  color: #f4f4fd;
-  margin: 24px 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  font-size: 16px;
   letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
   border: none;
+  border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .modal-send-button:hover {
