--- a/css/styles.css
+++ b/css/styles.css
@@ -573,8 +573,8 @@ img {
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  /* opacity: 0;
-  pointer-events: none; */
+  opacity: 0;
+  pointer-events: none;
 }
 
 .modal-overlay-popup.is-open {
