--- a/css/styles.css
+++ b/css/styles.css
@@ -536,7 +536,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -614,10 +614,13 @@ img {
   cursor: pointer;
   background-color: #e7e9fc;
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover {
+  background-color: #404bbf;
   border: none;
 }
 
@@ -681,10 +684,6 @@ img {
   color: #2e2f42;
 }
 
-.modal-input-icon:hover {
-  fill: #4d5ae5;
-}
-
 .modal-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -698,6 +697,10 @@ img {
 
 .modal-input:focus {
   border-color: #4d5ae5;
+}
+
+.modal-input:focus .modal-input-icon {
+  fill: #4d5ae5;
 }
 
 .modal-wrapper:focus-within .modal-input-icon {
