--- a/css/styles.css
+++ b/css/styles.css
@@ -699,7 +699,7 @@ img {
   border-color: #4d5ae5;
 }
 
-.modal-input:focus .modal-input-icon {
+.modal-input:focus + .modal-input-icon {
   fill: #4d5ae5;
 }
 
@@ -727,7 +727,7 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-comment-input:hover {
+.modal-comment-input:focus {
   border-color: #4d5ae5;
 }
 
